# data-liberation-project-datasets

./: .gitignore  README.md  pyproject.toml
army-slot-machines/: financial_statement_extractor.py  get_headers.py  main.py  page_metadata.csv  pyproject.toml  split_pdf.py
army-slot-machines/data_need_to_qa/: page_001_balance_sheet.csv  page_002_operating_results.csv  page_003_operating_results.csv  page_004_operating_results.csv  page_005_operating_results.csv  page_006_branch_breakdown.csv  page_007_branch_breakdown.csv  page_008_branch_breakdown.csv  page_009_branch_breakdown.csv  page_010_branch_breakdown.csv  page_011_branch_breakdown.csv  page_012_branch_breakdown.csv  page_013_branch_breakdown.csv  page_015_balance_sheet.csv  page_016_operating_results.csv  page_017_operating_results.csv  page_018_operating_results.csv  page_019_operating_results.csv  page_020_branch_breakdown.csv  page_021_branch_breakdown.csv  page_022_branch_breakdown.csv  page_023_branch_breakdown.csv  page_024_branch_breakdown.csv  page_025_branch_breakdown.csv  page_026_branch_breakdown.csv  page_027_branch_breakdown.csv  page_034_branch_breakdown.csv  page_043_balance_sheet.csv  page_044_operating_results.csv  page_045_operating_results.csv  page_046_operating_results.csv  page_047_operating_results.csv  page_048_branch_breakdown.csv  page_049_branch_breakdown.csv  page_050_branch_breakdown.csv  page_051_branch_breakdown.csv  page_052_branch_breakdown.csv  page_053_branch_breakdown.csv  page_054_branch_breakdown.csv  page_055_branch_breakdown.csv  (+424 more)
dod-abuse/: README.md  eda.py  report.txt  (+2 more)
(+34 files in other folders)
