[project]
name = "data-liberation-project-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.5",
    "dbt-duckdb>=1.9.4",
]

[dependency-groups]
dev = [
    "duckdb>=1.3.2",
    "sqlfluff>=3.4.2",
]
